--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -1,3 +1,3 @@
 .hero {
-  background: url('~images/bg/hero.jpg') center center no-repeat / cover;  
+  background: url('~images/bg/hero.jpg') center top no-repeat / cover;  
 }
