--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -4,11 +4,12 @@ html {
 }
 
 body {
-  font-family: 'Roboto', Helvetica, sans-serif;
+  font-family: 'Open Sans', Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $text-color;
 }
 
 .wrapper {
@@ -19,7 +20,7 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 95%;
+  width: 1490px;
 }
 
 .section {
@@ -59,4 +60,8 @@ p {
 
 button[type="button"] {
   cursor: pointer;
+}
+
+a {
+  color: inherit;
 }
