--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800');
 @import "normalize.css";
 
+@import "./layout/fonts.pcss";
 @import "./layout/base.pcss";
+
 @import './blocks/*.pcss';
