--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -24,7 +24,7 @@ body {
   // width: 1490px;
 }
 
-.section {
+.fullscreen-section {
   height: 100vh;
   min-height: 650px;
 }
@@ -65,4 +65,10 @@ button[type="button"] {
 
 a {
   color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
 }
