--- a/src/styles/blocks/triangles.pcss
+++ b/src/styles/blocks/triangles.pcss
@@ -1,6 +1,16 @@
 .triangles {
   position: relative;
-  height: 120px;
+  height: 100px;
+
+  &_top {
+    margin-top: -120px;
+    height: 120px;
+  }
+
+  &_bottom {
+    margin-bottom: -90px;
+    height: 90px;
+  }
 }
 
 .triangles__shape {
