--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,3 +1,7 @@
+.skill {
+  position: relative;
+}
+
 .skill__circle-shape {
   width: 150px;
   height: 150px;
@@ -14,4 +18,14 @@
     stroke-dasharray: 251;
     stroke-dashoffset: 100;
   }
+}
+
+.skill__circle-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  font-size: 18px;
+  color: rgba($text-color, .5);
 }
