перепись стилей в заголовке отзывов

--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -6,9 +6,7 @@
   padding-right: 20%;
 }
 
-.reviews__title {
-  font-size: 36px;
-  font-weight: bold; 
+.reviews__title.section-title {
   margin-bottom: 0;
 }
 
