все секции + pp

--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -1,10 +1,18 @@
 .contacts {
-  background: url('~images/bg/budda.jpg') right center no-repeat / cover;
-  padding-top: calc(95px + 150px);
+  background: url('~images/bg/budda.jpg') top right 53% no-repeat / cover;
+  padding-top: 253px;
+  padding-bottom: 135px;
 }
-
 
 .contacts__about {
   margin-bottom: 190px;
+}
+
+.contacts__container {
+  padding-right: 26%;
+}
+
+.contacts__form {
+  width: 89%;
 }
 
