--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -1,4 +1,12 @@
 .form__row {
-  margin-bottom: 40px;
+  margin-bottom: 38px;
   display: flex;
+
+  &--extra-margin {
+    margin-bottom: 60px;
+  }
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
