--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -1,5 +1,5 @@
 .hero {
-  padding-top: 60px;
+  padding-top: 54px;
   position: relative;
 }
 
@@ -10,16 +10,16 @@
 }
 
 .hero__content {
-  flex: 1;
+  flex: .8;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 15%;
+  padding: 0 24%;
 }
 
 .hero__downbutton {
   position: absolute;
-  bottom: 0;
+  bottom: 4%;
   left: 0;
   right: 0;
   display: flex;
