--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,13 +1,12 @@
 .reviews__header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   margin-bottom: 95px;
-  padding-right: 20%;
 }
 
 .reviews__title.section-title {
   margin-bottom: 0;
+  margin-right: 10%;
 }
 
 .reviews__buttons {
@@ -40,10 +39,14 @@
 }
 
 .reviews__content-item {
-  margin-right: 75px;
+  margin-right: 4%;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .reviews__content {
   display: flex;
   align-items: flex-start;
+  margin-left: 2%;
 }
