--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -1,14 +1,15 @@
 .skills-row__title {
-  margin-bottom: 35px;
+  margin-bottom: 26px;
   font-size: 24px;
   font-weight: 700;
 }
 
 .skills-row__list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .skills-row__item {
-  margin-right: 20px;
+  margin-right: 4%;
 
 }
