--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -1,27 +1,53 @@
-.values__wrapper {
-  background: url('~images/decor/bag.jpg') left bottom no-repeat / 450px auto;
+.values {
+  margin-bottom: 114px;
 }
+
+.values__container {
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    background: url('~images/decor/bag.jpg') left bottom / contain no-repeat ;
+    display: block;
+    height: 80%;
+    width: 50%;
+    left: -10%;
+    bottom: 5%;
+  }
+}
+
+.values__wrapper {
+  position: relative;
+}
+
 .values__title {
-  margin-bottom: 70px;
+  margin-bottom: 82px;
   display: flex;
   justify-content: center;
 }
 
 .values__title-container {
-  width: 50%;
+  width: 38%;
+  margin-left: 6%;
 }
 
 .values__title-text {
   font-size: 30px;
   font-weight: 700;
-  margin-bottom: 70px;
+  margin-bottom: 55px;
 }
 
 .values__content {
   color: rgba($text-color, .5);
   font-weight: 600;
+  line-height: 1.8;
 }
 
 .values__widget {
-  padding-left: 40%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.values__widget-container {
+  width: 58%;
 }
