--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -16,11 +16,12 @@ body {
   overflow: hidden;
   min-height: 100%;
   position: relative;
+  min-width: 1500px;
 }
 
 .container {
   margin: 0 auto;
-  width: 1000px;
+  width: 1480px;
   // width: 1490px;
 }
 
