--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -1,6 +1,7 @@
 .about__columns {
   display: flex;
-  padding: 140px 0 260px;
+  padding: 169px 17% 268px;
+  justify-content: space-between;
 }
 
 .about__user-text {
@@ -8,25 +9,26 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 56%;
 }
 
 .about__user {
-  margin-right: 5%;
+  width: 36%;
 }
 
 .about__desc {
   font-weight: 600;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .about__title {
   font-weight: 700;
   font-size: 36px;
-  margin-bottom: 36px;
+  margin-bottom: 30px;
   color: $text-color;
 }
 
 .about__ps {
   font-style: italic;
-  margin-bottom: 50px;
+  margin-bottom: 36px;
 }
