--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,10 +1,15 @@
+.menu {
+  &--color-white {
+    color: #fff;
+  }
+}
+
 .menu__list {
   display: flex;
 }
 
 .menu__item {
   margin-right: 60px;
-
   &:last-child {
     margin-right: 0;
   }
