--- a/src/styles/blocks/quote.pcss
+++ b/src/styles/blocks/quote.pcss
@@ -1,12 +1,12 @@
 .quote {
-  padding-left: 100px;
+  padding-left: 24%;
   position: relative;
   &:before {
     content: "";
     display: block;
-    width: 77px;
-    height: 66px;
-    opacity: .3;
+    width: 18%;
+    height: 37%;
+    opacity: .05;
     background: svg-load('quote.svg', fill=$text-color) center center / contain no-repeat;
     position: absolute;
     top: 0;
@@ -18,4 +18,5 @@
   margin-bottom: 30px;
   color: rgba($text-color, .5);
   font-weight: 600;
+  line-height: 1.8;
 }
