--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -3,18 +3,18 @@
 }
 
 .skill__circle-shape {
-  width: 150px;
-  height: 150px;
+  width: 166px;
+  height: 166px;
 }
 
 .skill__circle {
   fill: transparent;
   &_under {
     stroke: #eaeaea;
-    stroke-width: 10px;
+    stroke-width: 5px;
   }
   &_above {
-    stroke-width: 20px;
+    stroke-width: 12px;
     stroke-dasharray: 251;
     stroke-dashoffset: 100;
   }
@@ -28,4 +28,5 @@
   font-weight: bold;
   font-size: 18px;
   color: rgba($text-color, .5);
+  padding: 14px;
 }
