--- a/src/styles/blocks/works-slider.pcss
+++ b/src/styles/blocks/works-slider.pcss
@@ -1,10 +1,12 @@
 .works-slider {
   display: flex;
+  justify-content: space-between;
 }
 
 .works-slider__pics {
-  width: 770px;
+  width: 66%;
   position: relative;
+  z-index: 10;
 }
 
 .works-slider__fullpic {
@@ -17,7 +19,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 175px;
+  width: 178px;
 }
 
 .works-slider__thumb-item {
@@ -85,8 +87,20 @@
 }
 
 .works-slider__data {
-  width: 25%;
-  margin-left: 8%;
+  width: 24%;
+  position: relative;
+
+  &:before {
+    content: attr(data-slide);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-60%);
+    line-height: 1;
+    right: 100%;
+    font-size: 400px;
+    font-weight: 800;
+    color: rgba($text-color, .05);
+  }
 }
 
 .works-slider__thumb-link {
@@ -97,7 +111,7 @@
 .works-slider__tags {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  margin-bottom: 26px;
 }
 
 .works-slider__tag-item {
@@ -107,13 +121,14 @@
 
 .works-slider__title {
   font-size: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 42px;
   font-weight: bold;
 }
 
 .works-slider__desc {
   font-weight: 600;
   color: rgba($text-color, .7);
+  line-height: 1.8;
 }
 
 .works-slider__desc {
