--- a/src/styles/blocks/quote.pcss
+++ b/src/styles/blocks/quote.pcss
@@ -1,6 +1,11 @@
 .quote {
   padding-left: 24%;
   position: relative;
+
+  @include tablets {
+    padding-left: 0;
+  }
+
   &:before {
     content: "";
     display: block;
@@ -11,6 +16,10 @@
     position: absolute;
     top: 0;
     left: 0;
+
+    @include tablets {
+      background: none;
+    }
   }
 }
 
