--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,10 +1,12 @@
 .skill {
   position: relative;
-}
-
-.skill__circle-shape {
   width: 166px;
   height: 166px;
+
+  @include tablets {
+    width: 135px;
+    height: 135px;
+  }
 }
 
 .skill__circle {
@@ -29,4 +31,8 @@
   font-size: 18px;
   color: rgba($text-color, .5);
   padding: 14px;
+
+  @include phones {
+    font-size: 16px;
+  }
 }
