--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -2,6 +2,15 @@
   display: flex;
   padding: 169px 17% 268px;
   justify-content: space-between;
+  @include desktop {
+    padding-right: 2%;
+    padding-left: 2%;
+  }
+  @include phones {
+    flex-direction: column;
+    padding-top: 114px;
+    padding-bottom: 114px;
+  }
 }
 
 .about__user-text {
@@ -10,10 +19,17 @@
   flex-direction: column;
   justify-content: space-between;
   width: 56%;
+  @include phones {
+    width: 100%;
+  }
 }
 
 .about__user {
   width: 36%;
+  @include phones {
+    width: 100%;
+    margin-bottom: 50px;
+  }
 }
 
 .about__desc {
