--- a/src/styles/blocks/form-block.pcss
+++ b/src/styles/blocks/form-block.pcss
@@ -14,6 +14,12 @@
     color: rgba($text-color, .3);
     margin-left: 50px;
   }
+
+
+  @include phones {
+    margin-right: 0;
+    margin-bottom: 40px;
+  }
 }
 
 .form-block__container {
