--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -3,3 +3,17 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.header__menu {
+  width: 55%;
+
+  @include tablets {
+    display: none;
+  }
+}
+
+.header__buttons {
+  @include phones {
+    display: none;
+  }
+}
