--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -15,6 +15,10 @@
   align-items: center;
   justify-content: center;
   padding: 0 24%;
+
+  @include desktop {
+    padding: 0 10%;
+  }
 }
 
 .hero__downbutton {
