--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -6,10 +6,13 @@
 
 .menu__list {
   display: flex;
+  justify-content: center;
 }
 
 .menu__item {
-  margin-right: 60px;
+  // margin-right: 60px;
+  margin-right: 8%;
+
   &:last-child {
     margin-right: 0;
   }
@@ -17,4 +20,5 @@
 
 .menu__link {
   text-decoration: none;
+  white-space: nowrap;
 }
