--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -2,11 +2,20 @@
   display: flex;
   align-items: center;
   margin-bottom: 95px;
+  @include phones {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 33px;
+  }
 }
 
 .reviews__title.section-title {
   margin-bottom: 0;
   margin-right: 10%;
+  @include phones {
+    margin-right: 0%;
+    margin-bottom: 25px;
+  }
 }
 
 .reviews__buttons {
@@ -20,11 +29,9 @@
   position: relative;
   border-radius: 50%;
   margin-right: 30px;
-
   &:last-child {
     margin-right: 0;
   }
-
   &:before {
     content: "";
     width: 8px;
@@ -38,15 +45,23 @@
   }
 }
 
-.reviews__content-item {
-  margin-right: 4%;
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
 .reviews__content {
   display: flex;
   align-items: flex-start;
   margin-left: 2%;
+  @include phones {
+    width: 100%;
+    margin-left: 0;
+    overflow: hidden;
+  }
+}
+
+.reviews__content-item {
+  width: 100%;
+  @include phones {
+    flex-shrink: 0;
+  }
+  &:last-child {
+    margin-right: 0;
+  }
 }
