--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -7,9 +7,12 @@
 .skills-row__list {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -4%;
+  @include phones {
+    justify-content: center;
+  }
 }
 
 .skills-row__item {
-  margin-right: 4%;
-
+  margin-left: 4%;
 }
