--- a/src/styles/blocks/triangles.pcss
+++ b/src/styles/blocks/triangles.pcss
@@ -5,11 +5,21 @@
   &_top {
     margin-top: -120px;
     height: 120px;
+
+    @include phones {
+      height: 40px;
+      margin-top: -40px;
+    }
   }
 
   &_bottom {
     margin-bottom: -90px;
     height: 90px;
+
+    @include phones {
+      height: 40px;
+      margin-bottom: -40px;
+    }
   }
 }
 
