--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -1,18 +1,36 @@
 .values {
   margin-bottom: 114px;
+
+  @include phones {
+    margin-bottom: 75px;
+  }
 }
 
 .values__container {
   position: relative;
+  @include tablets {
+    padding-bottom: 350px;
+  }
   &:before {
     content: "";
     position: absolute;
-    background: url('~images/decor/bag.jpg') left bottom / contain no-repeat ;
+    background: url('~images/decor/bag.jpg') left bottom / contain no-repeat;
     display: block;
-    height: 80%;
-    width: 50%;
-    left: -10%;
     bottom: 5%;
+    height: 79%;
+    width: 69%;
+    left: -20%;
+    @include tablets {
+      bottom: 0;
+      left: 50%;
+      height: 300px;
+      transform: translateX(-50%);
+      background-position: center center;
+    }
+
+    @include phones {
+      width: 100%;
+    }
   }
 }
 
@@ -29,6 +47,19 @@
 .values__title-container {
   width: 38%;
   margin-left: 6%;
+  @include desktop {
+    width: 42%;
+    margin-left: 0;
+  }
+  @include tablets {
+    width: 68%;
+    text-align: center;
+  }
+  @include phones {
+    width: 100%;
+    margin-left: 0;
+    text-align: left;
+  }
 }
 
 .values__title-text {
@@ -46,8 +77,14 @@
 .values__widget {
   display: flex;
   justify-content: flex-end;
+  @include tablets {
+    justify-content: center;
+  }
 }
 
 .values__widget-container {
-  width: 58%;
+  width: 66%;
+  @include tablets {
+    width: 95%;
+  }
 }
