--- a/src/styles/blocks/works-slider.pcss
+++ b/src/styles/blocks/works-slider.pcss
@@ -1,10 +1,47 @@
 .works-slider {
   display: flex;
   justify-content: space-between;
+  @include tablets {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 }
 
 .works-slider__pics {
   width: 66%;
+  position: relative;
+  z-index: 10;
+  @include tablets {
+    margin-bottom: 105px;
+    width: 86%;
+  }
+  &:before {
+    content: attr(data-slide);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-60%);
+    line-height: 1;
+    left: 100%;
+    font-size: 400px;
+    font-weight: 800;
+    margin-left: -8%;
+    color: rgba($text-color, .05);
+    @include desktop {
+      top: 0;
+      transform: translateY(-15%);
+      margin-left: -11%;
+    }
+  }
+  @include phones {
+    width: 100%;
+    margin-bottom: 60px;
+    &:before {
+      display: none;
+    }
+  }
+}
+
+.works-slider__pics-content {
   position: relative;
   z-index: 10;
 }
@@ -20,6 +57,11 @@
   right: 0;
   bottom: 0;
   width: 178px;
+
+
+  @include phones {
+    display: none;
+  }
 }
 
 .works-slider__thumb-item {
@@ -41,6 +83,11 @@
   top: 100%;
   right: 0;
   display: flex;
+
+  @include phones {
+    top: initial;
+    bottom: 0;
+  }
 }
 
 .works-slider__btn {
@@ -88,18 +135,19 @@
 
 .works-slider__data {
   width: 24%;
-  position: relative;
+  @include tablets {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 18%;
+    text-align: center;
+  }
 
-  &:before {
-    content: attr(data-slide);
-    position: absolute;
-    top: 50%;
-    transform: translateY(-60%);
-    line-height: 1;
-    right: 100%;
-    font-size: 400px;
-    font-weight: 800;
-    color: rgba($text-color, .05);
+  @include phones {
+    padding: 0 5%;
+    text-align: left;
+    align-items: flex-start;
   }
 }
 
@@ -138,4 +186,3 @@
 .works-slider__link {
   display: block;
 }
-
