--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -1,3 +1,20 @@
 .works__content {
   padding-bottom: 60px;
+  @include phones {
+    padding-bottom: 0px;
+  }
+}
+
+.works__container {
+  @include phones {
+    width: 100%;
+  }
+}
+
+.works__section-title {
+  text-align: center;
+
+  @include phones {
+    margin-bottom: 30px;
+  }
 }
