--- a/src/index.pug
+++ b/src/index.pug
@@ -83,23 +83,7 @@ html(lang="en")
                     .values__content
                       p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
                 .values__widget
-                  - var skills = ['Front-end', 'Workflow'];
-                  .values__widget-container
-                    ul.skills
-                      each item in skills
-                        li.skills__item.skills-row
-                          .skills-row__title #{item}
-                          ul.skills-row__list
-                            - for (var i = 0; i < 4; i++)
-                              li.skills-row__item
-                                .skill
-                                  svg(viewBox="0 0 100 100").skill__circle-shape
-                                    circle(cx="50", cy="50", r="40").skill__circle.skill__circle_under
-                                    circle(cx="50", cy="50", r="40" stroke="url(#gradient)" transform='rotate(180 50 50)').skill__circle.skill__circle_above
-                                    linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-                                      stop(offset="0%" stop-color="#5500f2")
-                                      stop(offset="100%" stop-color="#8f00ef")
-                                  .skill__circle-text Javascript
+                  #skills-component
           section.works
             .container.works__container
               .section-title.works__section-title Мои работы
@@ -211,3 +195,5 @@ html(lang="en")
                   .text-quote__text
                     p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете 
                   .text-quote__author Martin Golding
+
+    include ./templates/entry.pug
