--- a/src/index.pug
+++ b/src/index.pug
@@ -88,29 +88,8 @@ html(lang="en")
             .container.works__container
               .section-title.works__section-title Мои работы
               .works__content
-                .works-slider
-                  .works-slider__pics(data-slide="1")
-                    .works-slider__pics-content
-                      +image('content/slider-1.jpg', 'works-slider__fullpic')
-                      .works-slider__buttons
-                        a(href="#").works-slider__btn.works-slider__btn_next
-                        a(href="#").works-slider__btn.works-slider__btn_prev
-                      ul.works-slider__thumbs
-                        - for (var i = 3; i > 0; i--)
-                          li.works-slider__thumb-item(class=`${i === 1 ? 'active' : ''}`)
-                            a(href="").works-slider__thumb-link
-                              +image(`content/slider-${i}.jpg`, 'works-slider__thumb')
-                  .works-slider__data
-                    ul.works-slider__tags
-                      - var tags = ['HTML', 'CSS', 'JavaScript'];
-                      each item in tags
-                        li.works-slider__tag-item 
-                          .tag #{item}
-                    .works-slider__title Сайт школы образования
-                    .works-slider__desc
-                      p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                    .works-slider__link 
-                      a(href="").iconed-link Посмотреть сайт
+                #works-slider-component
+
         .triangles.triangles_bottom
           svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
             polygon(points="0,0 1000,0 1000,100")
@@ -119,26 +98,7 @@ html(lang="en")
         section.contacts
           .container.contacts__container
             .contacts__about
-              .reviews
-                .reviews__header
-                  .reviews__title.section-title Что обо мне говорят
-                  .reviews__buttons
-                    .reviews__btn.reviews__btn_prev
-                    .reviews__btn.reviews__btn_next
-                ul.reviews__content
-                  - for (var i = 0; i < 2; i++)
-                    li.reviews__content-item
-                      .quote
-                        .quote__text
-                          p Этот парень проходил обучение веб-разработке не где-то, а в Loftschool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
-                        .quote__user
-                          .user-min
-                            .user-min__avatar
-                              .user-min__pic-wrapper
-                                +image('content/user.jpg', 'user-min__avatar-pic')
-                            .user-min__info
-                              .user-min__name Ковальчук Дмитрий
-                              .user-min__occ Основатель Loftschool
+              #reviews-component
             .contacts__form
               .form
                 .section-title.contacts__form-title Связаться со мной
