--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -46,28 +46,28 @@
 }
 
 .reviews__content {
-  display: flex;
-  align-items: flex-start;
-  margin-left: 2%;
-  @include tablets {
-    margin-left: 0;
-  }
+  // display: flex;
+  // align-items: flex-start;
+  // margin-left: 2%;
+  // @include tablets {
+  //   margin-left: 0;
+  // }
   
-  @include phones {
-    width: 100%;
-    margin-left: 0;
-    overflow: hidden;
-  }
+  // @include phones {
+  //   width: 100%;
+  //   margin-left: 0;
+  //   overflow: hidden;
+  // }
 }
 
 .reviews__content-item {
-  margin-right: 4%;
-  @include phones {
-    flex-shrink: 0;
-    margin-right: 0;
-    width: 100%;
-  }
-  &:last-child {
-    margin-right: 0;
-  }
+  // margin-right: 4%;
+  // @include phones {
+  //   flex-shrink: 0;
+  //   margin-right: 0;
+  //   width: 100%;
+  // }
+  // &:last-child {
+  //   margin-right: 0;
+  // }
 }
