--- a/src/styles/blocks/works-slider.pcss
+++ b/src/styles/blocks/works-slider.pcss
@@ -1,6 +1,7 @@
 .works-slider {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   @include tablets {
     flex-direction: column;
     justify-content: flex-start;
@@ -11,6 +12,8 @@
   width: 66%;
   position: relative;
   z-index: 10;
+  height: 340px;
+
   @include tablets {
     margin-bottom: 105px;
     width: 86%;
@@ -42,8 +45,20 @@
 }
 
 .works-slider__pics-content {
-  position: relative;
   z-index: 10;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%; 
+}
+
+.works-slider__fullpic-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%; 
 }
 
 .works-slider__fullpic {
@@ -186,4 +201,30 @@
 
 .works-slider__link {
   display: block;
+}
+
+
+.fade-enter-active, .fade-leave-active {
+  transition: .3s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-to {
+  opacity: 1;
+}
+
+.fade-leave {
+  opacity: 1;
+}
+
+.fade-leave-to {
+  opacity: 0;
 }
