--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -43,31 +43,42 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  &_prev {
+    &:before {
+      transform: translate(-50%, -50%) rotate(-180deg);
+    }
+  }
 }
 
 .reviews__content {
-  // display: flex;
-  // align-items: flex-start;
-  // margin-left: 2%;
-  // @include tablets {
-  //   margin-left: 0;
-  // }
-  
-  // @include phones {
-  //   width: 100%;
-  //   margin-left: 0;
-  //   overflow: hidden;
-  // }
+  overflow: hidden;
+}
+
+.reviews__content-wrapper {
+  display: flex;
+  align-items: flex-start;
+  will-change: transform;
+  transition: transform .3s;
+
+  @include tablets {
+    margin-left: 0;
+  }
+  @include phones {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 .reviews__content-item {
-  // margin-right: 4%;
-  // @include phones {
-  //   flex-shrink: 0;
-  //   margin-right: 0;
-  //   width: 100%;
-  // }
-  // &:last-child {
-  //   margin-right: 0;
-  // }
+  flex-shrink: 0;
+  padding-right: 30px;
+  width: 50%;
+
+  @include phones {
+    margin-right: 0;
+    width: 100%;
+  }
+  &:last-child {
+    margin-right: 0;
+  }
 }
