--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -3,19 +3,19 @@ script(type="text/x-template")#reviews
     .reviews__header
       .reviews__title.section-title Что обо мне говорят
       .reviews__buttons
-        button(type="button" @click="prev()").reviews__btn.reviews__btn_prev
-        button(type="button" @click="next()").reviews__btn.reviews__btn_next
+        button(type="button" @click="slide('prev')").reviews__btn.reviews__btn_prev
+        button(type="button" @click="slide('next')").reviews__btn.reviews__btn_next
     .reviews__content
-      Flickity(ref="flickity" :options="flickityOptions")
-        .reviews__content-item
+      ul.reviews__content-wrapper(ref="reviews-slider")
+        li.reviews__content-item(v-for="review in reviews")
           .quote
             .quote__text
-              p Этот парень проходил обучение веб-разработке не где-то, а в Loftschool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+              p {{review.text}} 
             .quote__user
               .user-min
                 .user-min__avatar
                   .user-min__pic-wrapper
-                    +image('content/user.jpg', 'user-min__avatar-pic')
+                    img(:src="review['author-pic']").user-min__avatar-pic
                 .user-min__info
-                  .user-min__name Ковальчук Дмитрий
-                  .user-min__occ Основатель Loftschool
+                  .user-min__name {{review['author-name']}}
+                  .user-min__occ {{review['author-occ']}}
