--- a/src/admin/index.pug
+++ b/src/admin/index.pug
@@ -6,6 +6,6 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Document
   body
-    .wrapper
+    .wrapper.admin-wrapper
       .maincontent
         #app-root
