размещены слои параллакса

--- a/src/index.pug
+++ b/src/index.pug
@@ -11,6 +11,10 @@ html(lang="en")
     .wrapper
       .maincontent
         .welcome-section
+          section.parallax
+            - for (var i = 1; i <= 7; i++)
+              .parallax__layer
+                +image(`parallax/${i}.${i === 1 ? 'jpg' : 'png'}`, 'parallax__image')
           section.fullscreen-section.hero
             .container.hero__container
               header.header
