--- a/src/styles/blocks/middle-section.pcss
+++ b/src/styles/blocks/middle-section.pcss
@@ -1,6 +1,7 @@
 .middle-section {
   padding: 140px 0;
-
+  position: relative;
+  background: #fff;
   @include phones {
     padding: 90px 0;
   }
