помаксимуму убрано растяжение картинок в параллаксе

--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -21,18 +21,18 @@
   &:nth-child(1) {
     display: block;
     .parallax__image {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
+      // object-fit: cover;
+      // width: 100%;
+      // height: 100%;
     }
   }
   &:nth-child(2) {
     // transform: translateZ(-50px) scale(1.5);
     display: block;
     .parallax__image {
-      bottom: 0;
+      top: 360px;
       right: 0;
-      width: 100%;
+      // width: 100%;
     }
   }
   &:nth-child(3) {
@@ -49,7 +49,7 @@
     display: block;
     .parallax__image {
       left: 0;
-      width: 100%;
+      // width: 100%;
       top: 610px;
     }
   }
