параллакс для широких экранов

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,9 @@ html(lang="en")
           section.parallax
             - for (var i = 1; i <= 7; i++)
               .parallax__layer
-                +image(`parallax/${i}.${i === 1 ? 'jpg' : 'png'}`, 'parallax__image')
+                picture
+                  source(srcset=require(`images/parallax/${i}_2560.${i === 1 ? 'jpg' : 'png'}`) media="(min-width: 1920px)").parallax__image
+                  img(srcset=require(`images/parallax/${i}.${i === 1 ? 'jpg' : 'png'}`)).parallax__image
           section.fullscreen-section.hero
             .container.hero__container
               header.header
