--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -5,6 +5,10 @@
   left: 0;
   right: 0;
 
+  @include super-wide {
+    display: none;
+  }
+
   @include tablets {
     display: none;
   }
@@ -21,9 +25,9 @@
   &:nth-child(1) {
     display: block;
     .parallax__image {
-      // object-fit: cover;
-      // width: 100%;
-      // height: 100%;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
   }
   &:nth-child(2) {
