адаптив для админки

--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -6,6 +6,7 @@ html {
     font-size: 14px;
   }
 }
+
 body,
 html {
   height: 100%;
@@ -29,11 +30,15 @@ body {
 .container {
   margin: 0 auto;
   max-width: 1480px;
-  width: 95%;
-  // width: 1490px;
-
+  width: 95%; // width: 1490px;
   @include phones {
     width: 85%;
+  }
+  &--mobile-wide {
+    @include phones {
+      width: 100%;
+      margin: 0;
+    }
   }
 }
 
